# rust-dict

./: Cargo.toml  README.md
src/: lib.rs
