[package]
name = "dict"
version = "0.1.5"
authors = ["nacho <nacho@ownyourbits.com>"]
description = "Exercise crate implementing real associative arrays, also known as dictionaries"
license = "GPL-3.0"
homepage = "https://ownyourbits.com"
repository = "https://github.com/nachoparker/rust-dict"

[dependencies]
